# overture

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: branch-protection.md  ci-smoke-proof.md  minimal-knowledge-graph-schema.md  onboarding-walkthrough.md  peer-onboarding-template-schema.md  symphony-ready-ticket-schema.md
examples/: m-wiz-milestone-config.json  m1_milestone_config.json  overture_mvp_linear_issue_draft.md  validate_curated_research.py  validate_linear_export.py  validate_metrics_summary.py  validate_two_intake_loop.py
overture/: __init__.py  auth.py  backlog_seeder.py  cli.py  closing_chain.py  export.py  export_runner.py  export_store.py  fixture.py  friction_log.py  graph.py  graph_http.py  graph_store.py  intake.py  linear_client.py  linear_webhook_receiver.py  metrics_store.py  milestone_verifier.py  observation_log.py  peer_onboarding.py  research.py  research_llm.py  retro_generator.py  rework_classifier.py  rework_counter.py  setup.py  synthesis.py  ticket_fixture_validation.py  ticket_writer.py  ui_host.py
tests/: test_backlog_seeder.py  test_branch_protection_red_check_probe.py  test_ci_failure_proof.py  test_designer_one_authoring_smoke.py  test_doc_links.py  test_dogfooding_day_one_smoke.py  test_eri83_ci_smoke_failure.py  test_export_cli.py  test_export_e2e.py  test_export_store.py  test_fixture.py  test_fixture_metrics.py  test_friction_cli.py  test_friction_log.py  test_graph_http.py  test_graph_store.py  test_intake_cli.py  test_intake_examples.py  test_linear_client.py  test_metrics_cli.py  (+31 more)
(+11 files in other folders)
