[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "overture"
version = "0.1.0"
description = "Idea intake and ticket preparation tools for Overture."
requires-python = ">=3.11"

[project.scripts]
overture = "overture.cli:main"

[tool.setuptools.packages.find]
include = ["overture*"]
